--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,18 +1,5 @@
-server:
-  port: 8080
-  host: localhost:8080
 spring:
   application:
     name: test-ifabula
-  datasource:
-    driver-class-name: org.postgresql.Driver
-    username: bobirival
-    password: password@147
-    url: jdbc:postgresql://localhost:5432/test-ifabula
-  jpa:
-    show-sql: true
-    hibernate:
-      ddl-auto: update
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
+  profiles:
+    active: development
